--- a/fig/kernel-sizes.tex
+++ b/fig/kernel-sizes.tex
@@ -7,7 +7,7 @@
   %   \includegraphics[width=\textwidth]{img/ex1-B}%
   %   \label{fig:npb-nvidia}}%
   \caption{%
-  	Length of kernels.%
+  	Test case sizes.%
   }%
   \label{fig:kernel-sizes} %
 \end{figure}
