--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\title{Plausible Test Case Generation for Compiler Bug Discovery}
+\title{Plausible Test Case Generation for Identifying Meaningful Compiler Bugs}
 
 \maketitle
 
