--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,5 +1,7 @@
 \section{Testing Methodologies}\label{sec:methodology}
 
+We describe two types of OpenCL testing using our approach. The first is a direct comparison of our approach to CLSmith, the current state-of-the-art in OpenCL test case generation. The second is results from unstructured, opportunistic testing of OpenCL implementations using CLgen, resulting in XX bug reports.
+
 
 \subsection{Classifying test results}
 
