--- a/sec/clgen.tex
+++ b/sec/clgen.tex
@@ -5,8 +5,8 @@
 Figure~\ref{fig:deeptune} shows the test case generation process.
 
 \begin{itemize}
-\item An initial seed corpus is collated from GitHub (w. rejection filter).
-\item Corpus is encoded for training.
+\item An initial seed corpus of OpenCL samples is mined from GitHub. An oracle compiler (LLVM 3.9) is used to reject samples were not well formed.
+\item Corpus is preprocessed and encoded for training. A uniform code style is enforced for whitespace, braces, identifier names, etc.
 \item LSTM networks model the vocabulary distribution over the encoded corpus.
 \item The trained network is sampled to generate new programs.
 \end{itemize}
@@ -32,6 +32,8 @@ Figure~\ref{fig:deeptune} shows the test case generation process.
   \label{fig:deeptune}
 \end{figure}
 
-\subsection{cldrive: OpenCL Test Case Execution}
+\subsection{Test Case Execution}
+
+At first, we used the test harness of CLSmith. However, this was too inflexible for our needs, requiring all kernels accept the same argument of a single \texttt{unsigned long} buffer. This prototype, in addition to being restricting, is not a common OpenCL use case (only XX\% of GitHub kernels have this prototype). Instead, we created cldrive, a tool to generate test harnesses for arbitrary OpenCL kernels.
 
 Generate host code stub to compile kernel. If kernel compiles: parse AST, read function arguments, generate data inputs for arguments. Limited subset of data types supported: No structs, no irregular data types (this is just an implementation detail, and can be addressed with more dev time).
