--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -1,9 +1,9 @@
 \section{Overview of Our Approach and Results}\label{sec:overview}
 
-\paragraph{Test case generation} We use CLgen, our deep learning program synthesis tool, to generate thousands of OpenCL samples.
+\paragraph{Test case generation} We mine GitHub for OpenCL fragments. We construct a corpus of example programs. We learn a Generative model over these programs, and use a discriminative model to tune. We use CLgen, our deep learning program synthesis tool, to generate thousands of OpenCL samples.
 
 \paragraph{OpenCL configurations tested} We conducted testing of X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL \emph{<device, driver>} pair.
 
 \input{tab/platforms}
 
-\paragraph{Testing results} All configurations yielded bugs. We found and reported X bugs. In comparing our approach against the state-of-the-art in OpenCL compiler test case generation, we found our approach was able to \cc{\ldots}
+\paragraph{Bugs found} All configurations yielded bugs. Every compiler crashed, and every compiler silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. In comparing our approach against the state-of-the-art in OpenCL compiler test case generation, we found our approach was able to \cc{\ldots}
