--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -2,8 +2,18 @@
 
 We describe two types of OpenCL testing using our approach. The first is a direct comparison of our approach to CLSmith, the current state-of-the-art in OpenCL test case generation. The second is results from unstructured, opportunistic testing of OpenCL implementations using CLgen, resulting in XX bug reports.
 
+\subsection{Classifying test cases}
 
-\subsection{Classifying test results}
+\cc{Use the results of difftest to determine whether the input sample was formed, well-typed, free from UB, etc. Plot ratio of CLgen and CLSmith outputs according to classifications (CLSmith should be all perfect).}
+
+\begin{enumerate}
+  \item Ill-formed ASCII sequence. The test case contains syntax errors preventing compilation.
+  \item Well-formed program.
+  \item Well-typed program.
+  \item Standard-conformant OpenCL program. The program
+\end{enumerate}
+
+\subsection{Classifying test outcomes}
 
 We select the mode output across a range of devices. Voting is used to select the oracle output.
 %
