--- a/difftest/CLgen Sampling Rate.ipynb
+++ b/difftest/CLgen Sampling Rate.ipynb
@@ -51,6 +51,75 @@
     "sample_rate = total_samples / total_time\n",
     "print(f\"CLgen takes on average {sample_rate:.2f}s / sample\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mysql://cc1:3306/project_b'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import db as db\n",
+    "import sqlalchemy as sql\n",
+    "from db import *\n",
+    "%run util.py\n",
+    "\n",
+    "hostname = \"cc1\"\n",
+    "db.init(hostname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "s = db.make_session()\n",
+    "co_runtimes = np.array([x[0] for x in s.query(coCLgenResult.runtime).all()])\n",
+    "cl_launcherCLgenResult_runtimes = np.array([x[0] for x in s.query(cl_launcherCLgenResult.runtime).all()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2716406407427373"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# co_runtimes.mean()\n",
+    "cl_launcherCLgenResult_runtimes.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
