--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "#. Results         48496  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "11                    76320           84864  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,21 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Counting objects: 13, done\u001b[K\n",
-      "remote: Finding sources: 100% (7/7)\u001b[K\u001b[K\n",
-      "remote: Total 7 (delta 6), reused 7 (delta 6)\u001b[K\n",
-      "Unpacking objects: 100% (7/7), done.\n",
+      "remote: Counting objects: 29, done\u001b[K\n",
+      "remote: Finding sources: 100% (20/20)\u001b[K\u001b[K\n",
+      "remote: Getting sizes: 100% (16/16)\u001b[K\u001b[K\n",
+      "remote: Compressing objects: 100% (6191/6191)\u001b[K\u001b[K\n",
+      "remote: Total 20 (delta 9), reused 17 (delta 9)\u001b[K\n",
+      "Unpacking objects: 100% (20/20), done.\n",
       "From https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   aeb7c83..dc2433e  master     -> origin/master\n",
+      "   a6d1810..f0f3678  master     -> origin/master\n",
       "First, rewinding head to replay your work on top of it...\n",
-      "Fast-forwarded master to dc2433edb6ecaeeba9f8f95612ef705c3f55e2a3.\n",
+      "Fast-forwarded master to f0f36785b56f5daf80389904c4d87f619098e6c1.\n",
       "On branch master\n",
       "Your branch is up-to-date with 'origin/master'.\n",
       "nothing to commit, working directory clean\n"
@@ -504,7 +506,7 @@
        "7              Oclgrind     16.10    1.2  Ubuntu 16.04 64bit     Emulator  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -559,17 +561,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "[master 2b035ea] auto: build/tab/megatable.tex\n",
-      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
+      "[master 3793e5b] auto: build/tab/megatable.tex\n",
+      " 1 file changed, 3 insertions(+), 3 deletions(-)\n",
       "Counting objects: 5, done.\n",
       "Delta compression using up to 16 threads.\n",
       "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 495 bytes | 0 bytes/s, done.\n",
+      "Writing objects: 100% (5/5), 521 bytes | 0 bytes/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
       "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
       "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   0d6c9d2..2b035ea  master -> master\n"
+      "   f0f3678..3793e5b  master -> master\n"
      ]
     }
    ],
