--- a/tab/platforms.tex
+++ b/tab/platforms.tex
@@ -3,6 +3,6 @@
   \centering %
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
-  \caption{Experimental platforms we tested, and number of submitted bug reports to date.}
+  \caption{Experimental platforms we tested, and the number of submitted bug generated and reported to date.}
   \label{tab:platforms}
 \end{table*}
