Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11607,3 +11607,19 @@
     booktitle = {PACT, to appear in},
     author = {Cummins, C. and Petoumenos, P. and Wang, Z. and Leather, H.}
 }
+
+@inproceedings{Han2017,
+    title = {{Use of Synthetic Benchmarks for Machine- Learning-based Performance Auto-tuning}},
+    year = {2017},
+    booktitle = {IPDPSW},
+    author = {Han, T. D. and Abdelrahman, T. S.},
+    publisher = {IEEE}
+}
+
+@inproceedings{Sun2016,
+    title = {{Toward understanding compiler bugs in GCC and LLVM}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Sun, C. and Le, V. and Zhang, Q. and Su, Z.},
+    keywords = {Keywords empirical studies, compiler bugs, compiler testing}
+}
