Update on Overleaf.

--- a/fig/test_process.tex
+++ b/fig/test_process.tex
@@ -1,9 +1,8 @@
 \begin{figure}
   \centering %
-  % \subfloat[][AMD Tahiti 7970]{%
-    \includegraphics[width=\columnwidth]{img/test_process}%
+  \includegraphics[width=\columnwidth]{img/test_process}%
   \caption{%
-  	Test execution process.%
+  	Test case execution. Each test case creates an $<A,B>$ pair of outcomes.%
   }%
   \label{fig:test-process} %
 \end{figure}
