--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -2,6 +2,8 @@
 
 We describe two types of OpenCL testing using our approach. The first is a direct comparison of our approach to CLSmith, the current state-of-the-art in OpenCL test case generation. The second is results from unstructured, opportunistic testing of OpenCL implementations using CLgen, resulting in XX bug reports.
 
+\input{fig/test_process}
+
 \begin{enumerate}
   \item Attempt to compile sample.
   \item If compilation succeeds, generate two test payloads and execute.
