--- a/fig/test_process.tex
+++ b/fig/test_process.tex
@@ -2,7 +2,7 @@
   \centering %
   \includegraphics[width=\columnwidth]{img/test_process}%
   \caption{%
-  	Test case execution. Each test case creates an $<A,B>$ pair of outcomes.%
+  	Test case execution, and possible outcomes. For each test case, a $(+,-)$ pair of outcomes is produced.%
   }%
   \label{fig:test-process} %
 \end{figure}
