--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -1,5 +1,5 @@
 \section{Extended OpenCL Testing using CLgen}
 
-Examples of bugs shown in Figure~\ref{lst:bugs}.
+Intensive, extended testing of OpenCL configurations using CLgen. Examples of bugs shown in Figure~\ref{lst:bugs}.
 
 \input{lst/bugs}
