--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -1,4 +1,4 @@
-\section{Extended OpenCL Testing using CLgen}
+\section{Bug Hunting with CLgen}
 
 Intensive, extended testing of OpenCL configurations using CLgen. Examples of bugs shown in Figure~\ref{lst:bugs}.
 
