--- a/fig/kernel-sizes.tex
+++ b/fig/kernel-sizes.tex
@@ -7,7 +7,7 @@
   %   \includegraphics[width=\textwidth]{img/ex1-B}%
   %   \label{fig:npb-nvidia}}%
   \caption{%
-  	Kernel sizes for wrong-code test cases.%
+  	Kernel sizes for wrong-code test cases. \cc{Data is incomplete, and this needs re-plotting and cleaning up}%
   }%
   \label{fig:kernel-sizes} %
 \end{figure}
