--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -27,6 +27,11 @@ The possible outcomes for a test case are a build failure (\textbf{bf}), build c
 
 In~\cite{Lidbury2015a}, the authors do not distinguish between compiler crashes and other runtime crashes.
 
+\paragraph{Floating points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds.
+
+CSmith, and by extension, CLSmith, do not support floating point operations. We allow relaxed comparisons between floating point values, using a margin of error. This means that if a compiler were to emit wrong code which changes the computed value only subtly, we may miss it; though we have no reason to suggest that such a case is any more likely than a wrong code bug leading the compiler to produce exactly the same output.
+% Section 7.4 of OpenCL 1.2 spec.
+
 
 \subsection{Classifying test outcomes}
 
