--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -92,7 +92,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>#. Results</th>\n",
-       "      <td>206721</td>\n",
+       "      <td>213623</td>\n",
        "      <td>200020</td>\n",
        "      <td>193477</td>\n",
        "      <td>60173</td>\n",
@@ -108,7 +108,7 @@
        "#. Programs    10001               10001    9238   3385                  2385   \n",
        "#. Testbeds        8                   5       5      5                     7   \n",
        "#. Params          4                   4       4      4                     4   \n",
-       "#. Results    206721              200020  193477  60173                 66780   \n",
+       "#. Results    213623              200020  193477  60173                 66780   \n",
        "\n",
        "             CLgen w. co  \n",
        "#. Programs         3385  \n",
@@ -205,7 +205,7 @@
        "      <td>1.2</td>\n",
        "      <td>1.2</td>\n",
        "      <td>ACCELERATOR</td>\n",
-       "      <td>9000</td>\n",
+       "      <td>17936</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -233,7 +233,7 @@
        "      <td>1.3</td>\n",
        "      <td>1.2</td>\n",
        "      <td>GPU</td>\n",
-       "      <td>11824</td>\n",
+       "      <td>23232</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -275,7 +275,7 @@
        "      <td>1.2.0.44</td>\n",
        "      <td>1.2</td>\n",
        "      <td>CPU</td>\n",
-       "      <td>32784</td>\n",
+       "      <td>67656</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -313,12 +313,12 @@
        "\n",
        "    #. CLSmith  #. CLSmith w. cldrive  #. GitHub  #. CLgen  \\\n",
        "12      320032                 320032     295616    108320   \n",
-       "15        9000                      0          0         0   \n",
+       "15       17936                      0          0         0   \n",
        "3       320032                 320032     379576    108320   \n",
-       "13       11824                      0          0         0   \n",
+       "13       23232                      0          0         0   \n",
        "9       320032                 320032     295616    108320   \n",
        "10      320032                 320032     281392     48104   \n",
-       "14       32784                      0          0         0   \n",
+       "14       67656                      0          0         0   \n",
        "11      320032                 320032     295616    108320   \n",
        "\n",
        "    #. CLgen w. cl_launcher  #. CLgen w. co  \n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults Intel(R) HD Graphics Haswell GT2 Desktop False {'w': 0, 'bf': 0, 'c': 0, 'to': 0, 'pass': 0, 'fail': 0, 'total': '0*'}\n"
+      "CLSmithResults Intel(R) HD Graphics Haswell GT2 Desktop False {'w': 0, 'bf': 55, 'c': 324, 'to': 320, 'pass': 97, 'fail': 0, 'total': '796*'}\n"
      ]
     },
     {
@@ -639,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults Intel(R) HD Graphics Haswell GT2 Desktop True {'w': 0, 'bf': 91, 'c': 489, 'to': 479, 'pass': 134, 'fail': 0, 'total': '1193*'}\n"
+      "CLSmithResults Intel(R) HD Graphics Haswell GT2 Desktop True {'w': 0, 'bf': 129, 'c': 751, 'to': 714, 'pass': 206, 'fail': 0, 'total': '1800*'}\n"
      ]
     },
     {
@@ -725,7 +725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults       Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz True {'w': 0, 'bf': 249, 'c': 22, 'to': 328, 'pass': 2825, 'fail': 0, 'total': '3424*'}\n"
+      "CLSmithResults       Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz True {'w': 0, 'bf': 524, 'c': 116, 'to': 706, 'pass': 5934, 'fail': 0, 'total': '7280*'}\n"
      ]
     },
     {
@@ -824,7 +824,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults Intel(R) Many Integrated Core Acceleration Card True {'w': 0, 'bf': 63, 'c': 5, 'to': 303, 'pass': 563, 'fail': 0, 'total': '934*'}\n"
+      "CLSmithResults Intel(R) Many Integrated Core Acceleration Card True {'w': 1, 'bf': 145, 'c': 11, 'to': 681, 'pass': 1164, 'fail': 0, 'total': '2002*'}\n"
      ]
     },
     {
@@ -867,7 +867,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz True {'w': 2, 'bf': 1029, 'c': 146, 'to': 1607, 'pass': 11354, 'fail': 0, 'total': '14138'}\n",
+      "CLSmithResults pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz True {'w': 5, 'bf': 1029, 'c': 146, 'to': 1607, 'pass': 11351, 'fail': 0, 'total': '14138'}\n",
       "CLgenResults pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz True {'w': 37, 'bf': 1657, 'c': 0, 'to': 9, 'pass': 5067, 'fail': 0, 'total': '6770*'}\n"
      ]
     },
@@ -897,7 +897,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLSmithResults Oclgrind Simulator True {'w': 2, 'bf': 405, 'c': 5, 'to': 520, 'pass': 4575, 'fail': 0, 'total': '5507'}\n",
+      "CLSmithResults Oclgrind Simulator True {'w': 3, 'bf': 405, 'c': 5, 'to': 520, 'pass': 4574, 'fail': 0, 'total': '5507'}\n",
       "CLgenResults Oclgrind Simulator True {'w': 31, 'bf': 1433, 'c': 0, 'to': 51, 'pass': 5255, 'fail': 0, 'total': '6770*'}\n"
      ]
     },
@@ -913,17 +913,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "[master 95fe115] auto: build/tab/megatable.tex\n",
-      " 1 file changed, 8 insertions(+), 8 deletions(-)\n",
+      "[master c10b139] auto: build/tab/megatable.tex\n",
+      " 1 file changed, 5 insertions(+), 5 deletions(-)\n",
       "Counting objects: 5, done.\n",
       "Delta compression using up to 16 threads.\n",
       "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 754 bytes | 0 bytes/s, done.\n",
+      "Writing objects: 100% (5/5), 578 bytes | 0 bytes/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
       "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
       "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   944062d..95fe115  master -> master\n"
+      "   91315e4..c10b139  master -> master\n"
      ]
     }
    ],
@@ -1216,7 +1216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "classifications = {}\n",
@@ -1406,7 +1408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.median(lcs)"
