Update on Overleaf.

--- a/fig/test_process.tex
+++ b/fig/test_process.tex
@@ -2,7 +2,7 @@
   \centering %
   \includegraphics[width=\columnwidth]{img/test_process}%
   \caption{%
-  	Test case execution, and possible outcomes. For each test case, a $(+,-)$ pair of outcomes is produced.%
+  	Test case execution, and possible outcomes. For each test case, a $(+,-)$ pair of outcomes is produced. Each outcome can be one of \{c,to,\cmark,bf,bc,bto\}.%
   }%
   \label{fig:test-process} %
 \end{figure}
